==============================
Changes for Crate-Java-Testing
==============================

Unreleased
==========

2019/02/14 0.6.4
================

 * Disable distribution download caching when the "latest" version placeholder
   is used.

2019/02/14 0.6.3
================

 * Add support to start a test cluster from "latest" placeholder urls.

2018/04/24 0.6.2
================

 * Fixed used content-type header for BaseTest, CrateDB > 2.3.x won't accept
   requests with wrong content-type header anymore.

 * Changed bintray repository ``id`` from ``central` to ``bintray`` to avoid
   mixup with maven central repository.

2018/02/13 0.6.1
================

 * Fixed used content-type header, CrateDB > 2.3.x won't accept request with
   wrong content-type header anymore.

2017/07/03 0.6.0
================

 * Added switch for default settings depending on whether the CrateDB version
   used is before or after 2.0.0.

2017/01/13 0.5.0
================

 * added support for setting command line arguments.

2017/01/13 0.4.5
================

 * fix a bug caused all settings provided for CrateDB >= 1.0.X to be
   ignored.

2016/12/15 0.4.4
================

 * crate versions which does not support -Des any longer
   can be used in the crate java testing layer.

2016/10/19 0.4.3
================

 * exposed PostgreSQL port in the Crate test server.

2016/06/16 0.4.2
================

 * make methods `start` cluster, `prepareEnvironment`, `before`
   and `after` of CrateTestCluster public.

2016/03/14 0.4.1
================

 * testing framework use an unique directory for each test cluster.

2016/02/19 0.4.0
================

 * BREAKING CHANGE: remove shaded crate client from crate testing server
   and cluster.

 * remove deprecated static ``build`` method from crate test server.

 * make crate instance directory configurable for removal after
   test servers are stopped.

2016/02/12 0.3.1
================
